--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "prettus/l5-repository": "^2.7",
+        "spatie/laravel-activitylog": "^3.17",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
@@ -27,7 +28,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "reliese/laravel": "^1.1"
     },
     "autoload": {
         "psr-4": {
